--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,3 +6,42 @@
   --grayish-blue: hsl(220, 15%, 55%);
   --dark-blue: hsl(218, 44%, 22%);
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--light-gray);
+  min-height: 100vh;
+}
+
+.card__container {
+  width: 88%;
+  background-color: var(--white);
+  padding: 1.2rem 1.2rem 2rem 1.2rem;
+  border-radius: 1rem;
+  display: grid;
+  gap: 1rem;
+  text-align: center;
+  box-shadow: 0px 15px 10px -20px #222222;
+}
+
+.hero {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+.title {
+  color: var(--dark-blue);
+}
+
+.paragraph {
+  color: var(--grayish-blue);
+}
